--- a/Views/phuongtrinhb1/phuongtrinhb1.cshtml
+++ b/Views/phuongtrinhb1/phuongtrinhb1.cshtml
@@ -6,3 +6,9 @@
 
 <h2>phuongtrinhb1</h2>
 
+@using (Html.BeginForm("phuongtrinhb1", "phuongtrinhb1"))
+{
+<lable>số a</lable>
+<input type="text"  name="so a"/>
+<label>số b </label>
+<input type=" text " name=" so b" />
