--- a/Views/phuongtrinhb1/phuongtrinhb1.cshtml
+++ b/Views/phuongtrinhb1/phuongtrinhb1.cshtml
@@ -9,6 +9,8 @@
 @using (Html.BeginForm("phuongtrinhb1", "phuongtrinhb1"))
 {
 <lable>số a</lable>
-<input type="text"  name="so a"/>
+<input type="text"  name="soA"/>
 <label>số b </label>
-<input type=" text " name=" so b" />
+<input type=" text " name=" soB" />
+<input type=" submit" value="phuong trinh co nghiem x la"/>
+}
