--- a/Views/phuongtrinhb1/phuongtrinhb1.cshtml
+++ b/Views/phuongtrinhb1/phuongtrinhb1.cshtml
@@ -12,5 +12,6 @@
 <input type="text"  name="soA"/>
 <label>số b </label>
 <input type=" text " name=" soB" />
-<input type=" submit" value="phuong trinh co nghiem x la"/>
+<input type=" submit" value="phuong trinh co nghiem la"/>
 }
+<label>nghiem phuong trinh la : @ViewBag.nghiemphuongtrinh</label>
