--- a/Views/phuongtrinhb1/phuongtrinhb1.cshtml
+++ b/Views/phuongtrinhb1/phuongtrinhb1.cshtml
@@ -13,5 +13,7 @@
 <label>số b </label>
 <input type=" text " name=" soB" />
 <input type=" submit" value="phuong trinh co nghiem la"/>
+<label> ẩn x </label>
+<input type=" text " name="anX"/>
 }
 <label>nghiem phuong trinh la : @ViewBag.nghiemphuongtrinh</label>
