--- a/Views/phuongtrinhb1/phuongtrinhb1.cshtml
+++ b/Views/phuongtrinhb1/phuongtrinhb1.cshtml
@@ -12,8 +12,7 @@
 <input type="text"  name="soA"/>
 <label>số b </label>
 <input type=" text " name=" soB" />
-<input type=" submit" value="phuong trinh co nghiem la"/>
-<label> ẩn x </label>
-<input type=" text " name="anX"/>
+<input type=" submit" value="x là"/>
+
 }
-<label>nghiem phuong trinh la : @ViewBag.nghiemphuongtrinh</label>
+<label>x la : @ViewBag.Timx = GTx</label>
