--- a/Views/phuongtrinhb1/phuongtrinhb1.cshtml
+++ b/Views/phuongtrinhb1/phuongtrinhb1.cshtml
@@ -6,13 +6,13 @@
 
 <h2>phuongtrinhb1</h2>
 
-@using (Html.BeginForm("phuongtrinhb1", "phuongtrinhb1"))
+@using (Html.BeginForm())
 {
-<lable>số a</lable>
+<lable>so a</lable>
 <input type="text"  name="soA"/>
-<label>số b </label>
+<label>so b </label>
 <input type=" text " name=" soB" />
-<input type=" submit" value="x là"/>
+
 
 }
-<label>x la : @ViewBag.Timx = GTx</label>
+<label>nghiệm x là : @ViewBag.Timgtx </label>
