--- a/Views/phuongtrinhb1/phuongtrinhb1.cshtml
+++ b/Views/phuongtrinhb1/phuongtrinhb1.cshtml
@@ -8,11 +8,12 @@
 
 @using (Html.BeginForm())
 {
-<lable>so a</lable>
-<input type="text"  name="soA"/>
-<label>so b </label>
-<input type=" text " name=" soB" />
-
-
+<label>Nhập số a:</label>
+<input type="text" name="soX" />
+<input type="text" name="soA" />
+<label>Nhập số b:</label>
+<input type="text" name="soY" />
+<input type="text" name="soB" />
+<input type="submit" value="Kết quả:" />
 }
-<label>nghiệm x là : @ViewBag.Timgtx </label>
+<label>Nghiệm của PT là: @ViewBag.Giaipt</label>
