--- a/Views/phuongtrinhb1/phuongtrinhb1.cshtml
+++ b/Views/phuongtrinhb1/phuongtrinhb1.cshtml
@@ -8,12 +8,10 @@
 
 @using (Html.BeginForm())
 {
-<label>Nhập số a:</label>
-<input type="text" name="soX" />
-<input type="text" name="soA" />
-<label>Nhập số b:</label>
-<input type="text" name="soY" />
-<input type="text" name="soB" />
-<input type="submit" value="Kết quả:" />
+<lable>so a</lable>
+<input type="text"  name="soA"/>
+<label>so b </label>
+<input type=" text " name=" soB" />
+
 }
-<label>Nghiệm của PT là: @ViewBag.Giaipt</label>
+<label>nghiệm x là : @ViewBag.Timgtx </label>
