--- a/Views/phuongtrinhb1/phuongtrinhb1.cshtml
+++ b/Views/phuongtrinhb1/phuongtrinhb1.cshtml
@@ -4,14 +4,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>phuongtrinhb1</h2>
-
+<h2>phuong trinh bac 1 dang ax+b=0</h2>
 @using (Html.BeginForm())
 {
-<lable>so a</lable>
-<input type="text"  name="soA"/>
-<label>so b </label>
-<input type=" text " name=" soB" />
+    <label>So A: </label>
+    <input type="text" name="soA" />
+    <label>so b </label>
+    <input type=" text " name=" soB" />
 
 }
-<label>nghiệm x là : @ViewBag.Timgtx </label>
+<label>nghiệm x là : @ViewBag.phuongtrinhb1 </label>
